# cross_platform_sysmon

./: Cargo.toml  README.md
src/: main.rs  monitor.rs
static/: index.html
