[package]
name = "cross_platform_sysmon"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29"             # For cross-platform system info
tokio = { version = "1", features = ["full"] }   # For async runtime
actix-web = "4.0"            # For web server
serde = { version = "1", features = ["derive"] } # For JSON serialization